Fixing spacing

--- a/base/skin/css/styles.css
+++ b/base/skin/css/styles.css
@@ -75,3 +75,7 @@ main.demos .row {
 main.demos .desc {
   padding-top:10px;
 }
+
+div#content a {
+  color:#2a6496;
+}
